<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/idTextHora"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|end"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            android:text="@string/evento_hora" />

        <Button
            android:id="@+id/button2"
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="false"
            android:gravity="center"
            android:visibility="visible" />

        <TextView
            android:id="@+id/idTextTituloEvento"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:singleLine="true"
            android:text="@string/evento_titulo"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/idTextHora1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|end"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            android:text="@string/evento_hora"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button21"
            android:layout_width="8dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="false"
            android:gravity="center"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/idTextoDuracionEvento"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start|top"
            android:text="@string/evento_duracion" />
    </LinearLayout>

</LinearLayout>