<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/leccion_reciente_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="0"
                app:srcCompat="@drawable/profilepic_default" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="bottom|center|start"
                    android:paddingStart="16dp"
                    android:text="@string/practica_nombre_categoria"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start|top"
                    android:paddingStart="16dp"
                    android:text="@string/practica_descripcion_categoria"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/textView101"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/practica_completion"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <CheckBox
                    android:id="@+id/include_category"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="8dp"
                    android:checked="false"
                    android:gravity="center"
                    android:visibility="visible" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>